add to cart and clear cart

--- a/partials/checkout.html
+++ b/partials/checkout.html
@@ -1,7 +1,4 @@
-<div>
-  {{bag}}
-</div>
-
+<button onclick="history.back(-1)">Return to shop</button>
 <table ng-init="checkout()">
   <thead>
     <tr>
