added emptying of bag

--- a/partials/checkout.html
+++ b/partials/checkout.html
@@ -20,6 +20,7 @@
         <strong>Ingredients:</strong> {{bagtea.tea.ingredients}}<br>
         <strong>Rating:</strong> {{bagtea.tea.rating}}<br>
         <strong>In stock?</strong> {{bagtea.tea.inStock}}<br>
+        <strong>quantity:</strong> {{bagtea.quantity}}<br>
         <strong>Categories:</strong>
         <ul ng-repeat="category in bagtea.tea.categories">
           <li>{{category}}</li>
