worked on remove button on checkout page (not complete)

--- a/partials/checkout.html
+++ b/partials/checkout.html
@@ -28,7 +28,7 @@
       </td>
       <td>
         <button>Edit</button>
-        <button>Remove</button>
+        <button ng-click="removeLineItem($index)">Remove</button>
       </td>
     </tr>
   </tbody>
