--- a/partials/main.html
+++ b/partials/main.html
@@ -46,7 +46,7 @@
       </td>
       <td>
         <form>
-          <select ng-model="quantity">
+          <select ng-model="addQuantity">
             <option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -58,7 +58,7 @@
             <option value="9">9</option>
             <option value="10">10</option>
           </select>
-          <button ng-click="addToBag(tea)">Add to bag</button>
+          <button ng-click="addToBag(this)">Add to bag</button>
         </form>
       </td>
     </tr>
