--- a/partials/main.html
+++ b/partials/main.html
@@ -1,23 +1,23 @@
-<label ng-init="initCategories()">Search by category:
-  <select ng-model="categorysearch.categories">
-    <option ng-repeat="category in categories">{{category}}</option>
-  </select>
-</label>
-<label>Search by name:
-  <input type="text" ng-model="namesearch.name">
-</label>
-<button ng-show="bag.length === 0">Checkout | Bag: Empty</button>
-<a href="/#/checkout"><button ng-show="bag.length > 0">Checkout | Bag: ({{count}})</button></a>
-<button ng-click="emptyBag()" ng-show="bag.length > 0">Empty bag</button>
+<center>
+  <label ng-init="initCategories()">Search by category:
+    <select ng-model="categorysearch.categories">
+      <option ng-repeat="category in categories">{{category}}</option>
+    </select>
+  </label>
+  <label>Search by name:
+    <input type="text" ng-model="namesearch.name">
+  </label>
+  <button ng-show="bag.length === 0">Checkout | Bag: Empty</button>
+  <a href="/#/checkout"><button ng-show="bag.length > 0">Checkout | Bag: ({{count}})</button></a>
+  <button ng-click="emptyBag()" ng-show="bag.length > 0">Empty bag</button>
+</center>
 <table>
   <thead>
     <tr>
-      <th>Tea</th>
-      <th>
-        Information
-      </th>
-        <th>
-        <label>Sort by price:
+      <th class="bottomborder">Tea</th>
+      <th class="bottomborder">Information</th>
+        <th class="bottomborder">
+        <label>Price:
           <select ng-model="sorter">
             <option value="price">Lowest</option>
             <option value="-price">Highest</option>
@@ -28,15 +28,17 @@
   </thead>
   <tbody ng-repeat="tea in teas | filter:namesearch | filter:categorysearch | orderBy:sorter">
     <tr>
-      <td>
-        <img src="{{tea.imageUrl}}">
+      <td class="bottomborder">
+        <center>
+          <img src="{{tea.imageUrl}}">
+        </center>
       </td>
-      <td>
-        <h3>{{tea.name}}</h3><br>
-        <strong>Price:</strong> {{tea.price/100 | currency}}<br>
-        <strong>Caffeine scale:</strong> {{tea.caffeineScale}}<br>
-        <strong>Ingredients:</strong> {{tea.ingredients}}<br>
-        <strong>Rating:</strong> {{tea.rating}}<br>
+      <td class="condense bottomborder">
+        <h3>{{tea.name}}</h3><br><br>
+        <strong>Price:</strong> {{tea.price/100 | currency}}<br><br>
+        <strong>Caffeine scale:</strong> {{tea.caffeineScale}}<br><br>
+        <strong>Ingredients:</strong> {{tea.ingredients}}<br><br>
+        <strong>Rating:</strong> {{tea.rating}}<br><br>
         <span ng-show="tea.inStock"><strong>In stock?</strong> Yes</span><br>
         <span ng-show="!tea.inStock"><strong>In stock?</strong> No</span><br>
         <strong>Categories:</strong>
@@ -44,20 +46,22 @@
           <li>{{category}}</li>
         </ul>
       </td>
-      <td>
-        <form>
-          <select ng-model="addQuantity">
-            <option value="1">1</option>
-            <option value="2">2</option>
-            <option value="3">3</option>
-            <option value="4">4</option>
-            <option value="5">5</option>
-            <option value="6">6</option>
-            <option value="7">7</option>
-            <option value="8">8</option>
-            <option value="9">9</option>
-            <option value="10">10</option>
-          </select>
+      <td class="bottomborder">
+        <form align="center">
+          <label class="small"><strong>Quantity:</strong>
+            <select ng-model="addQuantity">
+              <option value="1">1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+            </select>
+          </label><br><br>
           <button ng-click="addToBag(this)">Add to bag</button>
         </form>
       </td>
